g78 - Small UI Fix
Description
Fixed the problem where view btn overlapped when shrinked.
Made Collection view a bit long.

--- a/imports/stylesheets/icon.import.less
+++ b/imports/stylesheets/icon.import.less
@@ -21,6 +21,11 @@
     left: auto;
     right: auto;
 }
+@media (max-width: 830px) {
+  .view-btn-wrapper {
+    width: 30%;
+  }
+}
 .spinner-container{
 	width: 100%;
 	height: 100%;
