--- a/imports/stylesheets/partials/card.import.less
+++ b/imports/stylesheets/partials/card.import.less
@@ -100,5 +100,5 @@
     }
 }
 .memo-expired{
-    opacity: 0.5;
+    opacity: 0.6;
 }
